with-ingress/mongo-express-internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  type: ClusterIP
  selector:
    app: mongo-express
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
