with-ingress/mongo-express-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: mongo-ingress
spec:
  rules:
    - host: mongo-app.com
    - http:
        paths:
          - path: /
            backend:
              serviceName: mongo-express-internal-service
              servicePort: 8081
